src/objects/E2_Favourite_Scope__c.object
<CustomObject>
    <description>Estimator 2.0: This is a junction object between User and E2_Scope__c to store details when a template is marked as favorite.</description>
    <fields>
        <fullName>Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope</label>
        <referenceTo>E2_Scope__c</referenceTo>
        <relationshipLabel>Favorite Scopes</relationshipLabel>
        <relationshipName>E2_Favourite_Scope</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Scope_User_Id__c</fullName>
        <label>Unique Scope User Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E2_Favourite_Scope</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorite Scope</label>
    <nameField>
        <displayFormat>E2FS-{0000}</displayFormat>
        <label>Favorite Scope Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorite Scopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>